Quick tweaks to wording in ledger.html

--- a/web/templates/ledger.html
+++ b/web/templates/ledger.html
@@ -95,8 +95,8 @@
                         <th>Transaction</th>
                         <th>Amount</th>
                         <th>Description</th>
-                        <th>Source</th>
-                        <th>Category</th>
+                        <th>Party</th>
+                        <th>Expense Category</th>
                         <th>Files</th>
                     </tr>
                 </thead>
