--- a/web/templates/ledger.html
+++ b/web/templates/ledger.html
@@ -95,7 +95,7 @@
                         <th>Transaction</th>
                         <th>Amount</th>
                         <th>Description</th>
-                        <th>Party</th>
+                        <th>Payor/Payee</th>
                         <th>Expense Category</th>
                         <th>Files</th>
                     </tr>
